@@ -2,6 +2,7 @@ AUX libsecret-0.20.4-meson-build-test-vala-unstable-with-DSECRET_WITH_UNS.patch 
 DIST libsecret-0.20.2.tar.xz 526224 BLAKE2B cae93962480f65d2c91b1c26a23321d19c256692754ef37c658e346a6cb6b91cdebe134516c3c8652c5ee502b8f7a070a8d519ed878b2f6dfc124ea7b032613f SHA512 89143c8ccc8f6fa0cda2c98baef92e8cbf9b319a984826a09c527125e14712023ee65cada42a2c9232524528da8c1c3d2235ecbcb93e2f06e94121a601c22857
 DIST libsecret-0.20.4.tar.xz 529916 BLAKE2B d5922dcb1eb27e4cc6bc7770926fc3191c9f4634867ff9682fd33f9373d6fa2d334c9c1b995bd208bbf178af008ec7b224bd5388427617fbd7e48d05d2e35823 SHA512 599482796af001703c25d181a710c5a3207f44d4d0036ef2001cc541bde9ef453172b71df9bb214d27d1fbd2f28c1b5a5efdbd5faca3561188c07dccdc7d7c15
 EBUILD libsecret-0.20.2.ebuild 2658 BLAKE2B 425bb0e5c619574c4a4bdb134be9f5cd288efe2d94f6f1cd014d672d9c45ca1897beb81275e7df697c797453c4752a07cb1233ec1457fcb368261b8c9f779ceb SHA512 ea3def7a98315ca87a294c042b044d7089cd8ec355a49e001949a5d8cacc4abe377c2ea8a4a0c6df464e637008aece24e0bd605c94fa82af00cfafa2744f7156
+EBUILD libsecret-0.20.4-r1.ebuild 2616 BLAKE2B 42c5d9531ef60d6cc3b2cd17cefcc585607b4705be1d8cf60ff946c7bd54ad9abcb62e32b99c6d775c45f5386522a6a15a2d81abec6fcc186f0a95a14f310d9e SHA512 7ef432ea8b7e39171fec2ee01fa605e50b39de8e1cdc5531bca5ba6f2aabe84b4fed66a9b016c80a23b1a5b211dd241764ef90ba3ace25c659cba9aa99fef50a
 EBUILD libsecret-0.20.4.ebuild 2643 BLAKE2B 22c43bcbf4ba4f4325bd31cb6f97f8a7ee6aa500d6cd083281cc6db27075299144ee9ebae943c4e0c4a0004aa9cf6eac11b06479e034d0ab34a0c41c850a0524 SHA512 11d1577c5578ccd726a5e7602b402633348c542c5ea6fec9d66937717c22c36e345c719010531612222a86e298b2e838a3a10b1516d176635122d295a4c9851d
-MISC ChangeLog 251 BLAKE2B 3ef3475581211911830612faebe52ca003f8b5523673e8bcb778311656cd465ab6a3943d4ea569b104b13a7b57bec83e78af636aac868f4d0cca0f81fc805309 SHA512 fc5cd0ab6ae100ddf186809bbdc608df5a7ac6b722726ee8bbc6f492a6998ea8ce2e9cd45ec3faf99285870e5ec177f49c47022de9d6103f3bbfa6bba99b969d
+MISC ChangeLog 306 BLAKE2B e2574f86f1328e6f7012c9369ca6124eb1076da4c2b3bced61c827f855cbe4f11f0e146e48b095d2e8aa4cf36e5c9dda315fd27a41d518716fe34682324745b8 SHA512 5552bc58e49310f9f6682b3e77d031a061684ef3fb75b8815c5c2151a3417e34272fd6e9cd381d47f56d012b7db769edab696a4b84590cf0f7e563031d8457c0
 MISC metadata.xml 253 BLAKE2B a1efbd3751efaa83ee173f557ec1c8a4497a90b60896cf5a7a07da40b4f94a7a299ca0385477e82b2f5e5dbdf9afa482ccbe21f35ef44214e9c451d764b65529 SHA512 8d59f413993268ca783f7407b676900bb2d964754bf705d4175e2bafbe058a52af74f3928e4bd84d292518f8cf13fab7051486ab7cdc61d02fae6e0188d44442
