@@ -1,3 +1,5 @@
+*libsecret-0.20.4-r1
+::myrvolay		add keepassxc support
 *libsecret-0.20.4
 ::gentoo		eapi7, add python3_9 compatibility, switch to meson, gtk-doc use flag
 *libsecret-0.20.2
